--- a/visualization_assigment.ipynb
+++ b/visualization_assigment.ipynb
@@ -44,13 +44,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e05f473e-6410-4561-ab7b-7079f07edcd0",
+   "cell_type": "markdown",
+   "id": "6e0e813b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# El grafico muestra el aumento de la Poblaion Argentina en millones de Personas mientras que pasan los Years. Escogi esta forma de representarlo para reflejar con claridad(utilizando una linea) el radical aumento del 2016 al 2018 de la Población."
+    "***El grafico muestra el aumento de la Poblaion Argentina en millones de Personas mientras que pasan los Years. Escogi esta forma de representarlo para reflejar con claridad(utilizando una linea) el radical aumento del 2016 al 2018 de la Población.***"
    ]
   },
   {
@@ -89,13 +87,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64743ea6-d7e4-4b44-bfba-50065baa6163",
+   "cell_type": "markdown",
+   "id": "0d0fa1e9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# El grafico muestra la cantidad de Acciones de Empresas de hambuerguesa conocidadas. Escogi esta forma forma de representarlo para reflejar con claridad las diferentes proporciones de Acciones de cada Empresa."
+    "***El grafico muestra la cantidad de Acciones de Empresas de hambuerguesa conocidadas. Escogi esta forma forma de representarlo para reflejar con claridad las diferentes proporciones de Acciones de cada Empresa.***"
    ]
   },
   {
@@ -126,13 +122,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "52dfbf4e-72e8-4617-b274-43abcd01a177",
+   "cell_type": "markdown",
+   "id": "ec11be79",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Lo que tarda un cohete para salir de la atmósfera y a que velocidad lo hace. Elegiacos este grafico porque es el mas comun de usar cuando se habla de velocidad y tiempo."
+    "***Lo que tarda un cohete para salir de la atmósfera y a que velocidad lo hace. Elegiacos este grafico porque es el mas comun de usar cuando se habla de velocidad y tiempo.***"
    ]
   },
   {
@@ -162,13 +156,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "3eacb60c-276a-42e2-ad64-6bc3f306ac2a",
+   "cell_type": "markdown",
+   "id": "6a6a72dc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Representacion de las elecciones presidenciales an argentina. Utilice este grafico de torta prque es el mas usual ademas del bar."
+    "***Representacion de las elecciones presidenciales an argentina. Utilice este grafico de torta prque es el mas usual ademas del bar.***"
    ]
   },
   {
@@ -198,13 +190,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 103,
-   "id": "19268c62-9bf6-4b30-bb01-3ffe7ae79634",
+   "cell_type": "markdown",
+   "id": "02a588fa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Una frecuencia de radio. Se ve reprensentado por ondas porque justamente la radio tramnsmite ondas electromagnéticas."
+    "***Una frecuencia de radio. Se ve reprensentado por ondas porque justamente la radio tramnsmite ondas electromagnéticas.***"
    ]
   }
  ],
